Release 1.0.0: app branding, viewer fixes, and Windows EXE packaging
- Add VaultX logo/icon to UI and window title bar (Branding helper)
- Fix image viewer lag: paint directly instead of per-tick buffer allocation
- Fix PNG transparency, zoom-to-cursor, fit-on-open/resize, drag-to-pan
- Rewrite media player: explicit VLC discovery, playback on window shown,
  keyboard shortcuts, mute, fullscreen, fixed play/pause state sync
- Add valid main() entry point for jar/EXE launch
- Bump version to 1.0.0